Upgrade to Java 21 and support StringTemplates for SQL statements