@@ -15,7 +15,7 @@
     <version.javafx>19.0.2.1</version.javafx>
     <version.dirk>1.0.0-beta1</version.dirk>
     <version.eventstream>0.3.0</version.eventstream>
-    <version.junit5>5.6.0</version.junit5>
+    <version.junit5>5.10.2</version.junit5>
     <version.mockito>3.12.4</version.mockito>
   </properties>
 
@@ -135,7 +135,7 @@
       <dependency>
         <groupId>com.tngtech.archunit</groupId>
         <artifactId>archunit-junit5</artifactId>
-        <version>1.0.1</version>
+        <version>1.2.1</version>
       </dependency>
       <dependency>
         <groupId>javax.inject</groupId>
@@ -211,11 +211,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>3.10.1</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
+          <source>21</source>
+          <target>21</target>
           <compilerArgument>-parameters</compilerArgument>
+          <enablePreview>true</enablePreview>
         </configuration>
       </plugin>
       <plugin>
@@ -235,14 +236,18 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
+        <version>3.2.5</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.0.0-M5</version>
+        <version>3.2.5</version>
         <configuration>
           <forkCount>0</forkCount> <!-- reflections otherwise doesn't work in combination with Java 11... -->
+          <argLine>--enable-preview</argLine>
         </configuration>
         <executions>
           <execution>
